--- a/techtrends/Dockerfile
+++ b/techtrends/Dockerfile
@@ -6,6 +6,9 @@ COPY . /app
 WORKDIR /app
 RUN python -m pip install --upgrade pip
 RUN pip install -r requirements.txt
+RUN python init_db.py
 
 # command to run on container start
 CMD [ "python", "app.py" ]
+
+EXPOSE 3111
