--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -8,7 +8,7 @@ service:
   type: ClusterIP
 
 image: 
-  repository: techtrends
+  repository: techtrends:latest
   tag: latest
   pullPolicy: IfNotPresent
 
