--- a/helm/templates/deploy.yaml
+++ b/helm/templates/deploy.yaml
@@ -26,12 +26,12 @@ spec:
         - containerPort: {{ .Values.containerPort }}
         livenessProbe:
            httpGet:
-             path: {{ .Values.livenessProbePath }}
-             port: {{ .Values.containerPort }}
+             path: {{ .Values.livenessProbe.httpGet.path }}
+             port: {{ .Values.livenessProbe.httpGet.port }}
         readinessProbe:
            httpGet:
-             path: {{ .Values.readinessProbePath }}
-             port: {{ .Values.containerPort }}
+             path: {{ .Values.readinessProbe.httpGet.path }}
+             port: {{ .Values.readinessProbe.httpGet.port }}
         resources: 
           requests:
             memory: {{ .Values.resources.requests.memory }}
